chickpea/static/chickpea/css/chickpea.css
/* *********** */
/* Map details */
/* *********** */
#map {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}


/* *********** */
/* Controls    */
/* *********** */

.leaflet-control-draw {
    background: none repeat scroll 0 0 #F8F8F9;
    border-radius: 8px 8px 8px 8px;
    box-shadow: 0 1px 7px #999999;
}
.leaflet-control-draw a {
    height: 36px;
    width: 36px;
    display: none;
    margin-top: 0;
    margin-bottom: -4px; /* inline-blocks show spaces */
}
.leaflet-control-draw.control-enabled a + a {
    margin-left: 5px;
}
.leaflet-control-draw.control-enabled a {
    display: inline-block;
}
.leaflet-control-draw a.leaflet-control-edit-toggle {
    background-image: url("../img/toggle-edit.png");
    background-position: 50% 50%;
    background-repeat: no-repeat;
    display: inline-block;
}
.control-enabled {
    /*box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);*/
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.2) inset;
    background-color: #ddd;
}

/* ************* */
/* Marker's Icon */
/* ************* */
.chickpea-div-icon .icon_container {
    background-color: white;
    border-radius: 4px 4px 4px 4px;
    height: 32px;
    width: 32px;
    box-shadow: 7px 10px 8px -5px black;
    opacity: 0.9;
    background-color: #2470b5;
    text-align: center;
    line-height: 32px;
}
.chickpea-div-icon .icon_container img {
    vertical-align: middle;
}
.chickpea-div-icon .icon_arrow {
    border-left: 8px solid transparent;
    border-right: 8px solid transparent;
    border-top: 8px solid #2270b5;
    height: 0;
    left: 8px;
    position: relative;
    width: 0;
    opacity: 0.9;
    /*box-shadow: 4px 8px 6px -3px black;*/
}

/* ******** */
/* Modalbox */
/* ******** */

.modalbox  {
    position:fixed;
    top:0;
    left:0;
    width:100%;
    height:100%;
    display:none;
    background-color:rgba(0,0,0,0.8);
    text-align:center;
    z-index:101;
}
.modalbox:target {
    display: block;
}

/* *************************** */
/* Overriding leaflet defaults */
/* *************************** */

.leaflet-control-layers a {
    background-image: url("../img/layers.png");
    height: 46px;
    width: 46px;
}
.leaflet-control-zoom a {
    height: 36px;
    width: 36px;
}

/* ****** */
/* Mobile */
/* ****** */

@media all and (max-width: 480px) {

    .leaflet-control-layers-expanded label {
        display: inline-block;
        margin-right: 10px;
    }

    .leaflet-control-layers-expanded {
        margin-left: 10px;
    }
}

